Aggiunto: aggiunto file con le modifiche per la java 17. Cancellata l'import della classe AccessController perchè è stata deprecata. La classe IdRepoBundle non è piu' presente nel package com.sun.identity.idm.IdRepoBundle ma nel seguente org.forgerock.am.identity.presentation.IdRepoBundle. La classe AccessController è stata deprecata, quindi è stato richiamato il metodo AdminTokenAction.getInstance().run() che restituisce l'oggetto SSOToken. Nel metodo addUsers è stata eliminata la lofica custom per accese e scrivere allo usersstore di AM, perchè AM con le lib nuove ci da a disposizione il plugin per accedere allo userstore. Il metodo ident.getDN() è stato sostituito con il metodo ident.getName() e l'instanza della variabile answer, nel metodo con constructIdRepoPlugin(), è stato modificato con il nuovo metodo (IdRepo) thisClass.getDeclaredConstructor().newInstance();